--- a/public/index.html
+++ b/public/index.html
@@ -3,22 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
-    <link rel="stylesheet" href="/assets/css/main.css">
+    <title>Pricing</title>
+    <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
-    <header>
-        <h1>Welcome to Our Website</h1>
-    </header>
-    <nav>
-        <a href="pricing.html">Pricing</a>
-        <a href="signin.html">Sign In</a>
-        <a href="download.html">Download</a>
-    </nav>
-    <footer>
-        <a href="legal.html">Imprint</a>
-        <a href="privacy.html">Privacy</a>
-    </footer>
-    <script src="/assets/js/main.js"></script>
+    <section id="pricing-section" class="bg-black">
+        <!-- Content will be inserted here by JavaScript -->
+    </section>
+
+    <script src="assets/js/main.js"></script>
 </body>
 </html>
